# cloy

./: CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
cloy/: cloy.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: cloy.rst  modules.rst
tests/: test_cloy.py
